objects/Address__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Addresses</relationshipLabel>
        <relationshipName>Address</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Address_Line__c</fullName>
        <label>Street Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Neustar_Address_Prison__c</fullName>
        <inlineHelpText>Y - Is a prison 
N - Is not a prison 
&lt;blank&gt; - No information found for address</inlineHelpText>
        <label>Neustar Address - Prison</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Neustar_Address_Score__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>0 - 100 score of likelihood of contacting an entity by mailing address given the specified input address</inlineHelpText>
        <label>Neustar Address - Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Neustar_Address_USPS_Type__c</fullName>
        <inlineHelpText>S - Street
F - Firm 
R - Rural Route 
H - High Rise 
P - PO Box
G - General Delivery 
&lt;blank&gt; - No information found for address</inlineHelpText>
        <label>Neustar Address - USPS Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Neustar_Address_Vacancy__c</fullName>
        <inlineHelpText>Y - Vacant
N - Not Vacant
U - Unknown 
&lt;blank&gt; - No information found for address</inlineHelpText>
        <label>Neustar Address - Vacancy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Neustar_Address_Validation__c</fullName>
        <inlineHelpText>1 - Address can be standardized according to the USPS
0 - No input or cannot be validated
-1 - Address cannot be standardized according to the USPS
&lt;blank&gt; - No information found for address</inlineHelpText>
        <label>Neustar Address - Validation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Neustar_Address_Verification_Date__c</fullName>
        <inlineHelpText>&lt;blank&gt; - Neustar call out hasn&apos;t been made</inlineHelpText>
        <label>Neustar Address - Verification Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Neustar_CMRA_Indicator__c</fullName>
        <inlineHelpText>N - Not a Commercial Mail Receiving Agency (CMRA)
C - Is a CMRA
T - Building where a tenant is a CMRA
B - Both C and T
&lt;blank&gt; - No information found for address</inlineHelpText>
        <label>Neustar CMRA Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Neustar_DPV_Confirm__c</fullName>
        <inlineHelpText>Y - All address components confirmed
D - Only primary address confirmed, usually high-rise default
&lt;blank&gt; - No information found for address</inlineHelpText>
        <label>Neustar DPV Confirm</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Neustar_Residential_Indicator__c</fullName>
        <inlineHelpText>R - Residential 
B - Business 
D - Dual.  Usually associated with a high rise 
U - Unknown
N - Not Found on master file. 
&lt;blank&gt; - No information found for address</inlineHelpText>
        <label>Neustar Residential Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NC</fullName>
                </value>
                <value>
                    <fullName>ND</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current Physical</fullName>
                </value>
                <value>
                    <fullName>Current Mailing</fullName>
                </value>
                <value>
                    <fullName>Former</fullName>
                </value>
                <value>
                    <fullName>Bad</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Address</label>
    <nameField>
        <displayFormat>Add-{00}</displayFormat>
        <label>Address ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Address</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Zip_length_validation</fullName>
        <active>false</active>
        <errorConditionFormula>AND(LEN( Zip__c) &lt;&gt;5,
LEN( Zip__c) &lt;&gt; 10)</errorConditionFormula>
        <errorDisplayField>Zip__c</errorDisplayField>
        <errorMessage>Please enter a zipcode as either 5 digits (99999) or 10 digits (99999-9999).</errorMessage>
    </validationRules>
</CustomObject>